--- a/src/.ebextensions/django.config
+++ b/src/.ebextensions/django.config
@@ -1,4 +1,9 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: cblog.wsgi:application
+
+packages: 
+  yum:
+    python3-devel: []
+    mysql-devel: []
    
